--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,93 @@
-/*
- * build.gradle
- *
- * Copyright by toolarium-icap-client, all rights reserved.
- * MIT License: https://mit-license.org
- */
-apply from: "https://raw.githubusercontent.com/toolarium/common-gradle-build/master/gradle/common.gradle"
-
-
-/****************************************************************************************
- * Define project dependencies
- ****************************************************************************************/
-dependencies {
-    // see https://docs.gradle.org/current/userguide/java_library_plugin.html
-
-    // utilities
-    //implementation "net.sf.jptools:jptools:1.7.7"
-    //implementation "net.sf.jptools:jptools:1.7.7:slf4j-redirect"
-
-    // logging
-    implementation 'org.slf4j:slf4j-api:1.7.30'
-    testRuntimeOnly 'ch.qos.logback:logback-classic:1.2.3'
+plugins {
+    id 'java'
+    id 'jacoco'
+    id 'io.quarkus'
 }
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+
+    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
+
+    implementation 'io.quarkus:quarkus-arc'
+    implementation 'io.quarkus:quarkus-elytron-security-properties-file'
+    implementation 'io.quarkus:quarkus-resteasy-jaxb'
+    implementation 'io.quarkus:quarkus-resteasy-multipart'
+    implementation 'io.quarkus:quarkus-smallrye-health'
+    implementation 'io.quarkus:quarkus-container-image-docker'
+    implementation 'io.quarkus:quarkus-kubernetes'
+    implementation 'io.quarkiverse.helm:quarkus-helm:0.2.8'
+    implementation 'org.jboss.logmanager:log4j2-jboss-logmanager'
+
+    testImplementation 'io.quarkus:quarkus-jacoco'
+    testImplementation 'io.quarkus:quarkus-junit5'
+    testImplementation 'io.quarkus:quarkus-junit5-mockito'
+    testImplementation 'io.quarkus:quarkus-junit5-mockito-config'
+    testImplementation 'io.quarkus:quarkus-test-security'
+    testImplementation 'io.rest-assured:rest-assured'
+    testImplementation "org.junit.jupiter:junit-jupiter:5.8.1"
+    testImplementation "org.testcontainers:junit-jupiter:1.17.6"
+    testImplementation "org.testcontainers:testcontainers:1.17.6"
+
+}
+
+group 'de.skhh.modulf'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
+
+test {
+    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
+    reports {
+        junitXml.enabled(true)
+        html.enabled(false)
+    }
+    finalizedBy jacocoTestReport
+    jacoco {
+        excludeClassLoaders = ["*QuarkusClassLoader"]
+        destinationFile = layout.buildDirectory.file("jacoco-quarkus.exec").get().asFile
+    }
+    jacocoTestReport.enabled = true
+}
+
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
+    reports {
+        xml.required = true
+        csv.required = true
+    }
+}
+
+jacocoTestCoverageVerification {
+    executionData.setFrom("$project.buildDir/jacoco-quarkus.exec")
+    violationRules {
+        rule {
+            limit {
+                counter = 'INSTRUCTION'
+                value = 'COVEREDRATIO'
+                minimum = 0.3
+            }
+            limit {
+                counter = 'BRANCH'
+                value = 'COVEREDRATIO'
+                minimum = 0.3
+            }
+        }
+    }
+}
+check.dependsOn jacocoTestCoverageVerification
+
+compileJava {
+    options.encoding = 'UTF-8'
+    options.compilerArgs << '-parameters'
+}
+
+compileTestJava {
+    options.encoding = 'UTF-8'
+}
+
