--- a/gradle.properties
+++ b/gradle.properties
@@ -1,22 +1,7 @@
-# base information
-projectType              = java-library
-projectRootPackageName   = com.github.toolarium.icap.client
-projectGroupId           = com.github.toolarium
-projectComponentId       = toolarium
-projectDescription       = Implements an ICAP client compliant with RFC 3507.
-projectUrl               = https://github.com/toolarium/toolarium-icap-client
-licenseText              = Apache-2.0 License
-licenseUrl               = https://raw.githubusercontent.com/toolarium/toolarium-icap-client/master/LICENSE
-
-
-# tool information
-# checkstyleToolVersion    = 8.42
-testDependencyVersion    = 5.7.1
-# sourceCompatibility      = 11
-# targetCompatibility      = 11
-
-# jvm information
-org.gradle.jvmargs       = -Xmx1g -XX:MaxHeapSize=1g -XX:MaxMetaspaceSize=256m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-org.gradle.logging.level = quiet
-org.gradle.console       = rich
-org.gradle.warning.mode  = all
+#Gradle properties
+quarkusPluginVersion=2.16.6.Final
+quarkusPlatformArtifactId=quarkus-bom
+quarkusPluginId=io.quarkus
+quarkusPlatformGroupId=io.quarkus.platform
+quarkusPlatformVersion=2.16.6.Final
+version=1.0.0-SNAPSHOT
