--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,11 @@
-rootProject.name    = 'toolarium-icap-client'
+pluginManagement {
+    repositories {
+        mavenCentral()
+        gradlePluginPortal()
+        mavenLocal()
+    }
+    plugins {
+        id "${quarkusPluginId}" version "${quarkusPluginVersion}"
+    }
+}
+rootProject.name='shared-icap'
